--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Tu imagen -->
 				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/kerlybanes/kerlybanes.github.io/master/images/PartysKerly.jpg" alt="" /></a>
 				<!-- Tu perfil -->
-				<h1><strong>Kerly Moreira Banes</strong>, Administradora de Bases de Datos.<br />
+				<h1><strong>Kerly Moreira Banes</strong>, Adm. de Bases de Datos.<br />
 			</header>
 
 		<!-- Contenido principal -->
