--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<!-- Tu perfil - Descripción -->
 						<p>A lo largo de mi carrera profesional, he implementado muchas mejoras en servidores y motores de bases de datos SQL Server en versiones desde 2000 hasta 2014.</p>
 						<ul class="actions">
-							<li><a href="https://co.linkedin.com/in/jessica-yellow-64b053123" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
+							<li><a href="https://www.linkedin.com/in/kerly-moreira-1a8281111/" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
 						</ul>
 					</section>
 
