--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="https://medium.com/@jessicayellow/how-do-i-deliver-a-new-content-marketing-strategy-f3a82be2c312#.9ut6yqpy3" target="_blank" class="image fit thumb"><img src="https://cdn-images-1.medium.com/max/600/1*VaPJeQUEjZEBfq-q_Eif3A.jpeg" alt="" /></a>
 								<!-- Tu portafolio - Su imagen -->	
-									<img src="http://miguelnieva.com/content/images/2015/09/11885383_916947578373774_670895181705337546_n.jpg"/></a>
+									<img src="https://raw.githubusercontent.com/kerlybanes/kerlybanes.github.io/master/images/KerlyBP.jpg"/></a>
 								<h3>Optimizo Servidores de Bases de Datos.</h3>
 								<p>Implemento tácticas para mejorar el rendimiento de los servidores de B.D..</p>
 							</article>
