--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 							
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="https://medium.com/@jessicayellow/how-do-i-deliver-a-new-content-marketing-strategy-f3a82be2c312#.9ut6yqpy3" target="_blank" class="image fit thumb"><img src="https://raw.githubusercontent.com/kerlybanes/kerlybanes.github.io/master/images/KerlyBP.jpg" alt="" /></a>
-								<h3>Optimizo Servidores de Bases de Datos.</h3>
-								<p>Implemento tácticas para mejorar el rendimiento de los servidores de B.D..</p>
+								<h3>Formé parte del grupo financiero Banco Pacífico.</h3>
+								<p>Adquirí experiencias y destrezas como Especialista de Bases de Datos SQL Server.</p>
 							</article>
 						</div>
 					</section>
