--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<h2>Kerly Moreira Banes - Adm. de Bases de Datos.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
-						<p>A lo largo de mi carrera profesional, he implementado muchas mejoras en servidores y motores de bases de datos SQL Server en versiones desde 2000 hasta 2014.</p>
+						<p>A lo largo de mi carrera profesional, he implementado muchas mejoras en servidores y motores de bases de datos SQL Server en versiones desde 2000 hasta 2014, en las empresas en las que he laborado.</p>
 						<ul class="actions">
 							<li><a href="https://www.linkedin.com/in/kerly-moreira-1a8281111/" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
 						</ul>
