--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 							</article>
 							
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="https://medium.com/@jessicayellow/how-do-i-deliver-a-new-content-marketing-strategy-f3a82be2c312#.9ut6yqpy3" target="_blank" class="image fit thumb"><img src="https://raw.githubusercontent.com/kerlybanes/kerlybanes.github.io/master/images/KerlyBP.jpg" alt="" /></a>
-								<h3>Formé parte del grupo financiero Banco Pacífico.</h3>
+								<a href="https://www.bancodelpacifico.com/inicio.aspx" target="_blank" class="image fit thumb"><img src="https://raw.githubusercontent.com/kerlybanes/kerlybanes.github.io/master/images/KerlyBP.jpg" alt="" /></a>
+								<h3>Formé parte del grupo financiero Banco del Pacífico.</h3>
 								<p>Adquirí experiencias y destrezas como Especialista de Bases de Datos SQL Server.</p>
 							</article>
 						</div>
