--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
 								<h3>Formé parte del grupo financiero Banco del Pacífico.</h3>
 								<p>Adquirí experiencias y destrezas como Especialista de Bases de Datos SQL Server.</p>
 							</article>
+							
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="https://www.pycca.com/" target="_blank" class="image fit thumb"><img src="https://raw.githubusercontent.com/kerlybanes/kerlybanes.github.io/master/images/KerlyBP.jpg" alt="" /></a>
+								<h3>Formo parte de la Empresa de Retail Pycca.</h3>
+								<p>Tengo la oportunidad de desempeñarme com Administradora de Bases de Datos SQL Server.</p>
+							</article>
 						</div>
 					</section>
 			</div>
