--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
 								<h3>Formo parte de la Empresa de Retail Pycca.</h3>
 								<p>Tengo la oportunidad de desempeñarme com Administradora de Bases de Datos SQL Server.</p>
 							</article>
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="http://kerlybanes.blogspot.com/" target="_blank" class="image fit thumb"><img src="https://raw.githubusercontent.com/kerlybanes/kerlybanes.github.io/master/images/FotoBlog.PNG" alt="" /></a>
+								<h3>Visita mi blog Hoy.</h3>
+								<p>Aquí descubrir&aacute;s nuevos consejos para mantenerte saludable.</p>
+							</article>
 						</div>
 					</section>
 			</div>
