--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 						</ul>
 					</section>
 
+
 					<!-- Tu portafolio - Lo más importante -->
 					<section id="two">
 						<h2>Mejores experiencias</h2>
@@ -55,15 +56,16 @@
 									<p>Adquirí experiencias y destrezas como Especialista de Bases de Datos SQL Server.</p>
 								</article>
 							
-								<article class="6u$ 12u$(xsmall) work-item">
+								<article class="6u 12u$(xsmall) work-item">
 									<a href="https://www.pycca.com/" target="_blank" class="image fit thumb"><img src="https://raw.githubusercontent.com/kerlybanes/kerlybanes.github.io/master/images/KerlyPycca.jpg" alt="" /></a>
 									<h3>Formo parte de la Empresa de Retail Pycca.</h3>
 									<p>Tengo la oportunidad de desempeñarme com Administradora de Bases de Datos SQL Server.</p>
 								</article>
+
 								<article class="6u$ 12u$(xsmall) work-item">
-									<a href="http://kerlybanes.blogspot.com/" target="_blank" class="image fit thumb"><img src="https://raw.githubusercontent.com/kerlybanes/kerlybanes.github.io/master/images/FotoBlog.PNG" alt="" /></a>
+									<a href="http://kerlybanes.blogspot.com/" target="_blank" class="image fit thumb"><img src="https://raw.githubusercontent.com/kerlybanes/kerlybanes.github.io/master/images/FotoBlog.png" alt="" /></a>
 									<h3>Visita mi blog Hoy.</h3>
-									<p>Aquí descubrir&aacute;s nuevos consejos para mantenerte saludable.</p>
+									<p>Aquí descubrirás nuevos consejos para mantenerte saludable.</p>
 								</article>
 							
 						</div>
