--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 		<!-- Barra izquierda -->
 			<header id="header">
 				<!-- Tu imagen -->
-				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/kerlybanes/kerlybanes.github.io/master/images/PartysKerly.jpg" alt="" /></a>
+				<a href="#" class="image avatar">
+					<img src="https://raw.githubusercontent.com/kerlybanes/kerlybanes.github.io/master/images/PartysKerly.jpg" alt="" />
+				</a>
 				<!-- Tu perfil -->
-				<h1><strong>Kerly Moreira Banes</strong>, Adm. de Bases de Datos.<br />
+				<h2><strong>Kerly Moreira Banes</strong><br /> Adm. de Bases de Datos.<br /></h2><br />
+				<p>Madre, esposa, hija, profesional y afortunadamente feliz.</p>
 			</header>
 
 		<!-- Contenido principal -->
@@ -27,7 +30,7 @@
 							<h2>Kerly Moreira Banes - Adm. de Bases de Datos.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
-						<p>A lo largo de mi carrera profesional, he implementado muchas mejoras en servidores y motores de bases de datos SQL Server en versiones desde 2000 hasta 2014, en las empresas en las que he tenido la oportunidad de laborar.</p>
+						<p>A lo largo de mi carrera profesional, he implementado muchas mejoras en servidores y motores de bases de datos SQL Server. He trabajado en versiones desde 2000 hasta 2014. Además he realizado desarrollos en herramientas NET.</p>
 						<ul class="actions">
 							<li><a href="https://www.linkedin.com/in/kerly-moreira-1a8281111/" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
 						</ul>
