--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 								<article class="6u$ 12u$(xsmall) work-item">
 									<a href="https://www.bancodelpacifico.com/inicio.aspx" target="_blank" class="image fit thumb"><img src="https://raw.githubusercontent.com/kerlybanes/kerlybanes.github.io/master/images/KerlyBP.jpg" alt="" /></a>
-									<h3>Formé parte del grupo financiero Banco del Pacífico.</h3>
+									<h3>Formé parte del grupo financiero Banco del Pacífico - IBM.</h3>
 									<p>Adquirí experiencias y destrezas como Especialista de Bases de Datos SQL Server.</p>
 								</article>
 							
