--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<li><a href="https://www.linkedin.com/in/kerly-moreira-1a8281111/" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
 						</ul>
 						<ul class="actions">
-							<li><a href="https://www.linkedin.com/in/kerly-moreira-1a8281111/" target="_blank" class="button">Suscríbete.</a></li>
+							<li><a href="kerlybanes.github.io/suscribete.html" target="_blank" class="button">Suscríbete.</a></li>
 						</ul>
 
 					</section>
