--- a/index.html
+++ b/index.html
@@ -126,6 +126,6 @@
   gtag('config', 'UA-117587639-1');
 </script>
 	
-
+<script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"c9361955d8e4c62023ac50c21","lid":"3088f2ccaf"}) })</script>
 	</body>
 </html>
