Agrega Big Data Visualizaciones

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 				</a>
 				<!-- Tu perfil -->
 				<h2><strong>Kerly Moreira Banes</strong><br /> Adm. de Bases de Datos.<br /></h2><br />
-				<p>Madre, esposa, hija, profesional y afortunadamente feliz.</p>
+				<p>Madre, esposa, hija, profesional y afortunadamente feliz</p><br />
+				<p><strong>El día que no se aprende algo nuevo, es un día perdido.</strong></p>
 			</header>
 
 		<!-- Contenido principal -->
@@ -30,7 +31,11 @@
 							<h2>Kerly Moreira Banes - Adm. de Bases de Datos.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
-						<p>A lo largo de mi carrera profesional, he implementado muchas mejoras en servidores y motores de bases de datos SQL Server. He trabajado en versiones desde 2000 hasta 2014. Además he realizado desarrollos en herramientas NET.</p>
+						<p>Actualmente me encuentro desarrollando proyectos de Big Data en Jupyter Notebook.</p>
+						<p>A lo largo de mi carrera profesional, he implementado muchas mejoras a nivel de administración y alto rendimiento, en servidores y motores de bases de datos SQL Server. He trabajado en versiones 2000, 2005, 2008, 2008R2, 2012, 2014, 2016, 2017.</p>
+						<p>He realizado desarrollos en herramientas NET.: Visual Basic.Net y C#.Net. También en herramientas de bases de datos como SQL Server, Oracle, MySQL.</p>
+						<p>He configurado servidores, desarrollado e implementado proyectos de Reporting Services, en sus diferentes versiones, hasta 2017.</p>
+						
 						<ul class="actions">
 							<li><a href="https://www.linkedin.com/in/kerly-moreira-1a8281111/" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
 						</ul>
@@ -71,6 +76,18 @@
 
 								<article class="6u$ 12u$(xsmall) work-item">
 									<a href="http://kerlybanes.blogspot.com/" target="_blank" class="image fit thumb"><img src="https://raw.githubusercontent.com/kerlybanes/kerlybanes.github.io/master/images/FotoBlog.png" alt="" /></a>
+									<h3>Visita mi blog Hoy.</h3>
+									<p>Aquí descubrirás nuevos consejos para mantenerte saludable.</p>
+								</article>
+
+								<article class="6u 12u$(xsmall) work-item">
+									<a href="crime.html" target="_blank" class="image fit thumb"><img src="images/BigDataVisualiza.jpg" alt="Big Data y Data Scientist" /></a>
+									<h3>Big Data y Data Scientist.</h3>
+									<p>Visualización de datos a través de Jupyter Notebook con código Python.</p>
+								</article>
+
+								<article class="6u$ 12u$(xsmall) work-item">
+									<a href="http://kerlybanes.blogspot.com/" target="_blank" class="image fit thumb"><img src="images/BigDataVisualiza.jpg" alt="" /></a>
 									<h3>Visita mi blog Hoy.</h3>
 									<p>Aquí descubrirás nuevos consejos para mantenerte saludable.</p>
 								</article>
