Cambio en el index

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
 									<p>Visualización de datos a través de Jupyter Notebook con código Python.</p>
 								</article>
 
-								<article class="6u$ 12u$(xsmall) work-item">
+								<!-- <article class="6u$ 12u$(xsmall) work-item">
 									<a href="http://kerlybanes.blogspot.com/" target="_blank" class="image fit thumb"><img src="images/BigDataVisualiza.jpg" alt="" /></a>
 									<h3>Visita mi blog Hoy.</h3>
 									<p>Aquí descubrirás nuevos consejos para mantenerte saludable.</p>
-								</article>
+								</article> -->
 							
 						</div>
 					</section>
