--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<!-- Tu perfil - Descripción -->
 						<p>Actualmente me encuentro desarrollando proyectos de Big Data en Jupyter Notebook.</p>
 						<p>A lo largo de mi carrera profesional, he implementado muchas mejoras a nivel de administración y alto rendimiento, en servidores y motores de bases de datos SQL Server. He trabajado en versiones 2000, 2005, 2008, 2008R2, 2012, 2014, 2016, 2017.</p>
-						<p>He realizado desarrollos en herramientas NET.: Visual Basic.Net y C#.Net. También en herramientas de bases de datos como SQL Server, Oracle, MySQL.</p>
+						<p>He realizado desarrollos en herramientas NET.: Visual Basic.Net y C#.Net. También en herramientas de bases de datos como SQL Server, Oracle, MySQL. Tanto en ambiente Windows como en Linux.</p>
 						<p>He configurado servidores, desarrollado e implementado proyectos de Reporting Services, en sus diferentes versiones, hasta 2017.</p>
 						
 						<ul class="actions">
