--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<img src="https://raw.githubusercontent.com/kerlybanes/kerlybanes.github.io/master/images/PartysKerly.jpg" alt="" />
 				</a>
 				<!-- Tu perfil -->
-				<h2><strong>Kerly Moreira Banes</strong><br /> Adm. de Bases de Datos.<br /></h2><br />
+				<h2><strong>Kerly Moreira Banes</strong><br /> Big Data y Adm. de Bases de Datos.<br /></h2><br />
 				<p>Madre, esposa, hija, profesional y afortunadamente feliz</p><br />
 				<p><strong>El día que no se aprende algo nuevo, es un día perdido.</strong></p>
 			</header>
@@ -28,7 +28,7 @@
 					<section id="one">
 						<header class="major">
 							<!-- Tu perfil - Título -->
-							<h2>Kerly Moreira Banes - Adm. de Bases de Datos.</h2>
+							<h2>Kerly Moreira Banes - Big Data y Adm. de Bases de Datos.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
 						<p>Actualmente me encuentro desarrollando proyectos de Big Data en Jupyter Notebook.</p>
