--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Tu perfil -->
 				<h2><strong>Kerly Moreira Banes</strong><br /> Big Data y Adm. de Bases de Datos.<br /></h2><br />
 				<p>Madre, esposa, hija, profesional y afortunadamente feliz</p><br />
-				<p><strong>El día que no se aprende algo nuevo, es un día perdido.</strong></p>
+				<p><strong>El día que no aprendes algo nuevo, es un día perdido.</strong></p>
 			</header>
 
 		<!-- Contenido principal -->
@@ -32,9 +32,10 @@
 						</header>
 						<!-- Tu perfil - Descripción -->
 						<p>Actualmente me encuentro desarrollando proyectos de Big Data en Jupyter Notebook.</p>
-						<p>A lo largo de mi carrera profesional, he implementado muchas mejoras a nivel de administración y alto rendimiento, en servidores y motores de bases de datos SQL Server. He trabajado en versiones 2000, 2005, 2008, 2008R2, 2012, 2014, 2016, 2017.</p>
+						<p>A lo largo de mi carrera profesional, he implementado muchas mejoras a nivel de administración y alto rendimiento, en servidores y motores de bases de datos SQL Server, trabajando en versiones 2000, 2005, 2008, 2008R2, 2012, 2014, 2016, 2017 y 2019.</p>
+						<p>Además configuración servidores, desarrollado e implementado proyectos de Reporting Services, en sus diferentes versiones, hasta 2017.</p>
 						<p>He realizado desarrollos en herramientas NET.: Visual Basic.Net y C#.Net. También en herramientas de bases de datos como SQL Server, Oracle, MySQL. Tanto en ambiente Windows como en Linux.</p>
-						<p>He configurado servidores, desarrollado e implementado proyectos de Reporting Services, en sus diferentes versiones, hasta 2017.</p>
+						
 						
 						<ul class="actions">
 							<li><a href="https://www.linkedin.com/in/kerly-moreira-1a8281111/" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
