--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 						<!-- Tu perfil - Descripción -->
 						<p>Actualmente me encuentro desarrollando proyectos de Big Data en Jupyter Notebook.</p>
 						<p>A lo largo de mi carrera profesional, he implementado muchas mejoras a nivel de administración y alto rendimiento, en servidores y motores de bases de datos SQL Server, trabajando en versiones 2000, 2005, 2008, 2008R2, 2012, 2014, 2016, 2017 y 2019.</p>
-						<p>Además configuración servidores, desarrollado e implementado proyectos de Reporting Services, en sus diferentes versiones, hasta 2017.</p>
-						<p>He realizado desarrollos en herramientas NET.: Visual Basic.Net y C#.Net. También en herramientas de bases de datos como SQL Server, Oracle, MySQL. Tanto en ambiente Windows como en Linux.</p>
+						<p>Además configuración de servidores físicos y virtuales.</p>
+						<p>He realizado desarrollos e implementaciones en herramientas NET.: Visual Basic.Net y C#.Net, Reporting Services, en sus diferentes versiones, hasta 2017. También en herramientas de bases de datos como SQL Server, Oracle, MySQL. Tanto en ambiente Windows como en Linux.</p>
 						
 						
 						<ul class="actions">
