--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 						<ul class="actions">
 							<li><a href="kerlybanes.github.io/suscribete.html" target="_blank" class="button">Suscríbete.</a></li>
 						</ul>
+						<ul class="actions">
+							<li><a href="kerlybanes.github.io/TitulosEducacionFormal/Titulo3erNivel.pdf" target="_blank" class="button">Conoce mi capacitación.</a></li>
+						</ul>
 
 					</section>
 
